20220617_page2 완료 page3 와이트 틀 완료

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <div id="wrap2PerformanceInformation">
         <div id="informationTitle">
-            <h1>ASAC <br>Performance Schedule</h1>
+            <h1><span> ASAC </span><br>Performance Schedule</h1>
         </div>
         <div id="infomationPoster">
             <div id="posterWrap">
@@ -138,29 +138,185 @@
                     <div id="posterHidden">
                         <div class="swiper-container">
                             <div class="hiddenSwiper swiper-wrapper">
-                                <div class="poster poster_1 swiper-slide"></div>
-                                <div class="poster poster_2 swiper-slide"></div>
-                                <div class="poster poster_3 swiper-slide" ></div>
-                                <div class="poster poster_4 swiper-slide"></div>
-                                <div class="poster poster_5 swiper-slide"></div>
-                                <div class="poster poster_6 swiper-slide"></div>
-                                <div class="poster poster_7 swiper-slide"></div>
-                                <div class="poster poster_8 swiper-slide"></div>
-                                <div class="poster poster_9 swiper-slide"></div>
-                                <div class="poster poster_10 swiper-slide"></div>
+                                <div class="poster poster_1 swiper-slide">
+                                    <div class="posterOverlay">
+                                        <h3>나쁘지 않은 날</h3>
+                                        <div class="poster_text">
+                                            <span class="fa fa-calendar pofa-color">
+                                                &nbsp;2022년 6월17일
+                                            </span>
+                                            <span class="fa fa-comments pofa-color">
+                                                18
+                                            </span>
+                                            <a href="#">자세히보기</a>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="poster poster_2 swiper-slide">
+                                    <div class="posterOverlay">
+                                        <h3>수요일 수려한 콘서트</h3>
+                                        <div class="poster_text">
+                                            <span class="fa fa-calendar pofa-color">
+                                                &nbsp;2022년 7월
+                                            </span>
+                                            <span class="fa fa-comments pofa-color">
+                                                11
+                                            </span>
+                                            <a href="#">자세히보기</a>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="poster poster_3 swiper-slide">
+                                    <div class="posterOverlay">
+                                        <h3>루루섬의 비밀</h3>
+                                        <div class="poster_text">
+                                            <span class="fa fa-calendar pofa-color">
+                                                &nbsp;2022년 7월1일
+                                            </span>
+                                            <span class="fa fa-comments pofa-color">
+                                                02
+                                            </span>
+                                            <a href="#">자세히보기</a>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="poster poster_4 swiper-slide">
+                                    <div class="posterOverlay">
+                                        <h3>나포리 음악다방</h3>
+                                        <div class="poster_text">
+                                            <span class="fa fa-calendar pofa-color">
+                                                &nbsp;2022년 8월27일
+                                            </span>
+                                            <span class="fa fa-comments pofa-color">
+                                                37
+                                            </span>
+                                            <a href="#">자세히보기</a>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="poster poster_5 swiper-slide">
+                                    <div class="posterOverlay">
+                                        <h3>지수가 누구야</h3>
+                                        <div class="poster_text">
+                                            <span class="fa fa-calendar pofa-color">
+                                                &nbsp;2022년 3월26일
+                                            </span>
+                                            <span class="fa fa-comments pofa-color">
+                                                25
+                                            </span>
+                                            <a href="#">자세히보기</a>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="poster poster_6 swiper-slide">
+                                    <div class="posterOverlay">
+                                        <h3>다시,봄 다시 봄 </h3>
+                                        <div class="poster_text">
+                                            <span class="fa fa-calendar pofa-color">
+                                                &nbsp;2022년 4월1일
+                                            </span>
+                                            <span class="fa fa-comments pofa-color">
+                                                51
+                                            </span>
+                                            <a href="#">자세히보기</a>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="poster poster_7 swiper-slide">
+                                    <div class="posterOverlay">
+                                        <h3>빛으로 만나는 김흥도</h3>
+                                        <div class="poster_text">
+                                            <span class="fa fa-calendar pofa-color">
+                                                &nbsp;2022년 1월20일
+                                            </span>
+                                            <span class="fa fa-comments pofa-color">
+                                                127
+                                            </span>
+                                            <a href="#">자세히보기</a>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="poster poster_8 swiper-slide">
+                                    <div class="posterOverlay">
+                                        <h3>정동하&소향 전율</h3>
+                                        <div class="poster_text">
+                                            <span class="fa fa-calendar pofa-color">
+                                                &nbsp;2022년 3월26일
+                                            </span>
+                                            <span class="fa fa-comments pofa-color">
+                                                223
+                                            </span>
+                                            <a href="#">자세히보기</a>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="poster poster_9 swiper-slide">
+                                    <div class="posterOverlay">
+                                        <h3>아침음악살롱</h3>
+                                        <div class="poster_text">
+                                            <span class="fa fa-calendar pofa-color">
+                                                &nbsp;2022년 3월
+                                            </span>
+                                            <span class="fa fa-comments pofa-color">
+                                                311
+                                            </span>
+                                            <a href="#">자세히보기</a>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="poster poster_10 swiper-slide">
+                                    <div class="posterOverlay">
+                                        <h3>뮤지컬 생텍쥐페리</h3>
+                                        <div class="poster_text">
+                                            <span class="fa fa-calendar pofa-color">
+                                                &nbsp;2022년 5월21일
+                                            </span>
+                                            <span class="fa fa-comments pofa-color">
+                                                115
+                                            </span>
+                                            <a href="#">자세히보기</a>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
                             </div>
+                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- 포스터 스와이프 슬라이드 -->
     <script src="js/swiperPosterSlide.js"></script>
 
-    <div id="wrap3PerformancePost"></div>
+    <!-- 포스터 오버레이 -->
+    <script src="js/posterOverlay.js"></script>
+
+    <div id="wrap3PerformancePost">
+        <div id="performancePost">
+            <div id="postTitle">
+                <h1><span> ASAC </span><br>Performance Posts</h1>
+            </div>
+            <div id="postBox">
+                <div class="posts"></div>
+                <div class="posts"></div>
+            </div>
+        </div>
+    </div>
     <div id="wrap4PerformancePhoto"></div>
-    <div id="wrap5BestPerformance"></div>
+    <div id="wrap5PerformanceNotice"></div>
     <footer></footer>
 </body>
 
