20220620_page3까지 작업
page 4 이미지 찾고 푸터 작업하기!

--- a/index.html
+++ b/index.html
@@ -304,19 +304,148 @@
     <!-- 포스터 오버레이 -->
     <script src="js/posterOverlay.js"></script>
 
+
+    <!-- 공연 게시물 -->
     <div id="wrap3PerformancePost">
         <div id="performancePost">
             <div id="postTitle">
                 <h1><span> ASAC </span><br>Performance Posts</h1>
             </div>
             <div id="postBox">
-                <div class="posts"></div>
-                <div class="posts"></div>
+                <div class="posts">
+                    <div class="postBigBox">
+                        <div class="overlayPost">
+                            <h3>#김창완밴드 티켓오픈</h3>
+                            <div class="postText">
+                                <span class="fa fa-calendar pofa-color">
+                                    &nbsp;2022년 6월23일
+                                </span>
+                                <span class="fa fa-comments pofa-color">
+                                    77
+                                </span>
+                                <a href="#">자세히보기</a>
+                            </div>
+                            <hr>
+                        </div>
+                        <a href="#"><img src="img/index/post_1.jpg" alt="post1" class="postImg"></a>
+                    </div>
+                    <div class="smallBox">
+                        <div class="postSmallBox">
+                            <div class="overlayPost">
+                                <h3>#죠지 티켓오픈</h3>
+                                <div class="postText">
+                                    <span class="fa fa-calendar pofa-color">
+                                        &nbsp;2022년 6월22일
+                                    </span>
+                                    <span class="fa fa-comments pofa-color">
+                                        06
+                                    </span>
+                                    <a href="#">자세히보기</a>
+                                </div>
+                                <hr>
+                            </div>
+                            <a href="#"><img src="img/index/post_2.jpg" alt="post2" class="postImg"></a>
+                        </div>
+                        <div class="postSmallBox">
+                            <div class="overlayPost">
+                                <h3>#김뜻돌 티켓오픈</h3>
+                                <div class="postText">
+                                    <span class="fa fa-calendar pofa-color">
+                                        &nbsp;2022년 56월22일
+                                    </span>
+                                    <span class="fa fa-comments pofa-color">
+                                        10
+                                    </span>
+                                    <a href="#">자세히보기</a>
+                                </div>
+                                <hr>
+                            </div>
+                            <a href="#"><img src="img/index/post_3.jpg" alt="post3" class="postImg"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="posts">
+                    <div class="smallBox">
+                        <div class="postSmallBox">
+                            <div class="overlayPost">
+                                <h3>Re:feel 예매 안내</h3>
+                                <div class="postText">
+                                    <span class="fa fa-calendar pofa-color">
+                                        &nbsp;2022년 6월25일
+                                    </span>
+                                    <span class="fa fa-comments pofa-color">
+                                        22
+                                    </span>
+                                    <a href="#">자세히보기</a>
+                                </div>
+                                <hr>
+                            </div>
+                            <a href="#"><img src="img/index/post_4.jpg" alt="post4" class="postImg"></a>
+                        </div>
+                        <div class="postSmallBox">
+                            <div class="overlayPost">
+                                <h3>아침음악살롱 공연안내</h3>
+                                <div class="postText">
+                                    <span class="fa fa-calendar pofa-color">
+                                        &nbsp;2022년 6월29일
+                                    </span>
+                                    <span class="fa fa-comments pofa-color">
+                                        114
+                                    </span>
+                                    <a href="#">자세히보기</a>
+                                </div>
+                                <hr>
+                            </div>
+                            <a href="#"><img src="img/index/post_5.jpg" alt="post5" class="postImg"></a>
+                        </div>
+                    </div>
+                    <div class="postBigBox">
+                        <div class="overlayPost">
+                            <h3>노을콘서트 티켓 구매안내</h3>
+                            <div class="postText">
+                                <span class="fa fa-calendar pofa-color">
+                                    &nbsp;2022년 12월21일
+                                </span>
+                                <span class="fa fa-comments pofa-color">
+                                    358
+                                </span>
+                                <a href="#">자세히보기</a>
+                            </div>
+                            <hr>
+                        </div>
+                        <a href="#"><img src="img/index/post_7.jpg" alt="post6" class="postImg"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="morePost">
+            <div class="viewPost">
+                <a href="#">게시물 더보기</a>
             </div>
         </div>
     </div>
-    <div id="wrap4PerformancePhoto"></div>
-    <div id="wrap5PerformanceNotice"></div>
+
+    <!-- 공연 예술단 사진 -->
+    <div id="wrap4PerformancePhoto">
+        <div id="photoTitle"></div>
+        <div id="photoImage">
+            <div class="photoBox">
+                <div class="performancePhoto"></div>
+            </div>
+            <div class="photoBox">
+                <div class="performancePhoto"></div>
+                <div class="performancePhoto"></div>
+            </div>
+            <div class="photoBox">
+                <div class="performancePhoto"></div>
+                <div class="performancePhoto"></div>
+            </div>
+            <div class="photoBox">
+                <div class="performancePhoto"></div>
+            </div>
+        </div>
+    </div>
+
     <footer></footer>
 </body>
 
