20220622_page content  완료
last_logo, footer, 주변에 꾸밀 수 있는 것 생각해보기
반응형 작업 시작하기

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="img/common/facon.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -351,7 +352,7 @@
                                 <h3>#김뜻돌 티켓오픈</h3>
                                 <div class="postText">
                                     <span class="fa fa-calendar pofa-color">
-                                        &nbsp;2022년 56월22일
+                                        &nbsp;2022년 6월22일
                                     </span>
                                     <span class="fa fa-comments pofa-color">
                                         10
@@ -428,37 +429,141 @@
     <!-- 공연 예술단 사진 -->
     <div id="wrap4PerformancePhoto">
         <div id="photoTitle">
-            <h1><span> ASAC </span><br>시설 소개</h1>
+            <h1><span> ASAC </span><br>Introduction to the Facilities</h1>
+            <h3>"<span>문화예술의 다양성</span> 예술이란 세상의 다양함"</h3>
+            <h4>안산문화예술의전당은 문화와 예술의 공간입니다.</h4>
         </div>
         <div id="photoImage">
             <div class="photoBox photo1">
                 <div class="performancePhoto">
-                    <a href="#" class="photo_1"><img src="img/index/art_art.jpg" alt="art">
-                    <span>ddddd</span>
-                </a>
+                    <a href="#"><img src="img/index/art_art_text.jpg" alt="art" class="photo_1"></a>
                 </div>
             </div>
             <div class="photoBox photo2">
                 <div class="performancePhoto">
-                    <a href="#" class="photo_2"><img src="img/index/art_center.jpg" alt="art"></a>
+                    <a href="#" class="photo_2"><img src="img/index/art_center_text.jpg" alt="art"></a>
                 </div>
                 <div class="performancePhoto">
-                    <a href="#"><img src="img/index/art_ciqq.jpg" alt="art" class="photo_2 photoPadding"></a>
+                    <a href="#"><img src="img/index/art_ciqq_text.jpg" alt="art" class="photo_2 photoPadding"></a>
                 </div>
             </div>
             <div class="photoBox photo3">
                 <div class="performancePhoto">
-                    <a href="#"><img src="img/index/art_festival.jpg" alt="art" class="photo_3"></a>
+                    <a href="#"><img src="img/index/art_festival_text.jpg" alt="art" class="photo_3"></a>
                 </div>
                 <div class="performancePhoto">
-                    <a href="#"><img src="img/index/art_kk_musium.jpeg" alt="art" class="photo_3"></a>
+                    <a href="#"><img src="img/index/art_kk_musium_text.jpg" alt="art" class="photo_3"></a>
                 </div>
             </div>
             <div class="photoBox photo4">
                 <div class="performancePhoto">
-                    <a href="#"><img src="img/index/art_musium.jpg" alt="art" class="photo_4"></a>
+                    <a href="#"><img src="img/index/art_musium_text.jpg" alt="art" class="photo_4"></a>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- 안산문화예술의전당 사업소개 -->
+    <div id="wrap5ProjectIntroduction">
+        <div id="projectTitle">
+            <h1><span> ASAC </span><br>Project Introduction</h1>
+        </div>
+        <div id="projectCard">
+            <div class="card">
+                <div class="cardIcon">
+                    <img src="img/index/icon_school.png" alt="icon">
+                </div>
+                <div class="cardText">
+                    <a href="#">
+                        <h3>꿈다락 토요문화학교</h3>
+                        <h4>안산시 청소년들을 위한 문화 예술 체험을 지원합니다.</h4>
+                        <p>
+                            <i class="material-icons">call</i>
+                            <span>031-481-4023</span>
+                        </p>
+                    </a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cardIcon">
+                    <img src="img/index/icon_ticket.png" alt="icon_ticket">
+                </div>
+                <div class="cardText">
+                    <a href="#">
+                        <h3>청소년 키움티켓</h3>
+                        <h4>안산시 청소년들에게 관람료 일부를 지원합니다.</h4>
+                        <p>
+                            <i class="material-icons">call</i>
+                            <span>031-481-4028</span>
+                        </p>
+                    </a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cardIcon">
+                    <img src="img/index/icon_chair.png" alt="icon">
+                </div>
+                <div class="cardText">
+                    <a href="#">
+                        <h3>문화소외계층 객석나눔</h3>
+                        <h4>문화소외 계층을 위한 문화관람을 지원합니다.</h4>
+                        <p>
+                            <i class="material-icons">call</i>
+                            <span>031-481-4025</span>
+                        </p>
+                    </a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cardIcon">
+                    <img src="img/index/icon_map.png" alt="icon">
+                </div>
+                <div class="cardText">
+                    <a href="#">
+                        <h3>지역특성화 사업소개</h3>
+                        <h4>문화와 예술이 일상인 도시, 안산시를 만듭니다.</h4>
+                        <p>
+                            <i class="material-icons">call</i>
+                            <span>031-481-4024</span>
+                        </p>
+                    </a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cardIcon">
+                    <img src="img/index/icon_education.png" alt="icon">
+                </div>
+                <div class="cardText">
+                    <a href="#">
+                        <h3>교육사업</h3>
+                        <h4>예술적 감각 향상과 즐거운 삶을 지원합니다.</h4>
+                        <p>
+                            <i class="material-icons">call</i>
+                            <span>031-481-4026</span>
+                        </p>
+                    </a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cardIcon">
+                    <img src="img/index/icon_support.png" alt="icon">
+                </div>
+                <div class="cardText">
+                    <a href="#">
+                        <h3>지역예술 지원사업</h3>
+                        <h4>우리 지역의 창의적인 예술가의 예술활동을 지웝합니다.</h4>
+                        <p>
+                            <i class="material-icons">call</i>
+                            <span>031-481-4027</span>
+                        </p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="lastLogo">
+        <div class="button" is="wtc-barfy-stars" data-config='{"numParticles": 50, "gravity": 0.3}'>Hover me, baby.
         </div>
     </div>
 
