--- a/index.html
+++ b/index.html
@@ -583,9 +583,9 @@
     </div>
 
     <div id="snow" class="lastLogo">
-        <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+        <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
         <!-- stats.js lib -->
-        <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+        <script src="//threejs.org/examples/js/libs/stats.min.js"></script>
         <script src="js/particles.js"></script>
 
         <h2>ANSAN ARTS CENTER</h2>
